[package]
name = "taskorch"
version = "0.1.0"
edition = "2024"
description = "Concurrent Pool for task processing"
license = "MIT or Apache-2.0"
repository = "https://github.com/hailongxu/taskorch"
keywords = ["concurrency","task","orchestration","scheduler"]
category = ["concurrency"]
readme = "README.md"

[dependencies]
