[package]
name = "taskorch"
version = "0.3.0"
edition = "2024"
authors = ["xuhailong"]
description = "Concurrent Pool for task processing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hailongxu/taskorch"
keywords = ["concurrency","task","orchestration","scheduler"]
category = ["concurrency"]
readme = "README.md"

[dependencies]

[features]
# Log levels: none or single only, otherwise a compile error
log-error=[]
log-warn=[]
log-info=[]
log-debug=[]
log-trace=[]
# Controls whether log messages are printed with ANSI color codes
log-color=[]